--- a/src/components/ImageSearch/SearchBar/SearchBar.css
+++ b/src/components/ImageSearch/SearchBar/SearchBar.css
@@ -1,10 +1,10 @@
+.searchBarDiv {
+    width: 50%;
+}
+
 .input-group-searchBar {
     align-items: center;
     margin: 2rem 0 2rem 0;
-}
-
-.input-group {
-    width: 40rem;
 }
 
 .input-group-prepend {
@@ -37,4 +37,15 @@ input:focus {
 
 .btn-search:hover {
     background-color: white; 
+}
+
+@media screen and (max-width: 827px) {
+
+    .searchBarDiv {
+        width: 80%;
+    }
+
+    .searchBar {
+        width: 80%;
+    }
 }
