--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,14 +1,48 @@
-/* .modal {
+.image-modal {
     background-color: #0b1616b6;
     width: 100%;
-    height: 50rem;
-    position: absolute;
+    height: 100%;
+    position: fixed;
     top: 0;
     left: 0;
+    z-index: 2;
 }
 
-.modal:first-child {
-    height: 15rem;
-    width: 100%;
-} */
+.modal-content {
+    background-color: #0b1616b6;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    width: 75%
+}
+
+.centered-image {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+.more-info {
+   display: flex;
+   flex-direction: column;
+   margin: 2rem 0;
+}
+
+.image-modal > p, .more-info > * {
+    color: white;
+}
+
+.image-modal > p {
+    text-align: right;
+    margin-top: 1rem;
+    margin-right: 1.5rem;
+}
+
+.centered-image > img {
+    max-height: 24rem;
+    max-width: 90%;
+}
+
+
 
