--- a/src/components/Home/PhotoSearch/PhotoSearch.css
+++ b/src/components/Home/PhotoSearch/PhotoSearch.css
@@ -1,56 +1,55 @@
 .photoContainer {
-    position: relative;
-    flex-direction: column;
-    justify-content: center;
-    z-index: 0;
-    display: flex;
-    height: 35rem;
-    width: 100%;
-    margin-bottom: 5rem;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 0;
+  display: flex;
+  height: 28rem;
+  width: 100%;
+  margin-bottom: 5rem;
 }
 
 .highlightPhoto {
-    position: relative;
-    z-index: 1;
-    height: 35rem;
-    width: 100%;
+  position: relative;
+  z-index: 1;
+  height: 25rem;
+  width: 100%;
 }
 
 .imageContent {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    z-index: 2;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
 }
 
-
 .photographerInfo {
-    color: white;
-    padding: .5rem;
-    background-color: rgba(0, 0, 0, 0.445);
+  color: white;
+  padding: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.445);
 }
 
 @media (min-width: 426px) and (max-width: 769px) {
-    .photoContainer {
-        height: auto;
-        margin-bottom: 3rem;
-    }
-    
-    .highlightPhoto {
-        height: 25rem;
-    }
+  .photoContainer {
+    height: auto;
+    margin-bottom: 3rem;
+  }
+
+  .highlightPhoto {
+    height: 20rem;
+  }
 }
 
 @media screen and (max-width: 426px) {
-    .photoContainer {
-        height: auto;
-        margin-bottom: 3rem;
-    }
+  .photoContainer {
+    height: auto;
+    margin-bottom: 3rem;
+  }
 
-    .highlightPhoto {
-        height: 20rem;
-    }
+  .highlightPhoto {
+    height: 20rem;
+  }
 }
